# ASCII-SDF

./: CMakeLists.txt  Makefile  README.md  a.out  build.sh  cube  cube.cpp  draw_rays.ipynb  main.cpp  raycast  raycast.cpp  rays.txt  sdf  sdf.cpp  sphere_cut.cpp  vec2.h  vec3.h  winuser_test.cpp
